@@ -105,7 +105,10 @@ void Avatar::createAvatar()
 	// TODO: do also the scaling here! That way the other nodes can be positioned in their real places
 	mAvatarModelNode = dynamic_cast<Ogre::SceneNode*>(mAvatarNode->createChild("AvatarModelNode"));
 	
-	Model* model = Model::Create("settler.modeldef.xml", "AvatarEntity");
+	Model* model = new Model("AvatarEntity");
+	model->create("settler");
+	
+// 	Model* model = Model::Create("spider.modeldef.xml", "AvatarEntity");
 	//Model::Create("malebuilder.modeldef.xml", "AvatarEntity1");
 
 
