@@ -49,14 +49,14 @@ endif
 
 
 ember_bin_LDADD = $(top_builddir)/src/components/ogre/widgets/libWidgets.a \
-	$(top_builddir)/src/services/libServices.a $(top_builddir)/src/services/config/libConfigService.a \
-	$(top_builddir)/src/services/metaserver/libMetaserverService.a $(top_builddir)/src/services/server/libServerService.a \
 	$(top_builddir)/src/services/sound/libSoundService.a $(top_builddir)/src/services/logging/libLoggingService.a \
-	$(top_builddir)/src/framework/libFramework.a $(top_builddir)/src/extensions/libExtensions.a \
 	$(top_builddir)/src/components/ogre/environment/libEnvironment.a $(top_builddir)/src/components/ogre/model/libModel.a \
 	$(top_builddir)/src/components/ogre/EmberSceneManager/src/libEmberSceneManager.a $(top_builddir)/src/components/ogre/environment/meshtree/libMeshTree.a \
 	$(top_builddir)/src/components/ogre/input/libInput.a $(top_builddir)/src/components/ogre/carpenter/libCarpenter.a \
-	$(top_builddir)/src/components/ogre/jesus/libJesus.a $(EMBER_EXT_LIBS)
+	$(top_builddir)/src/components/ogre/jesus/libJesus.a  \
+	$(top_builddir)/src/services/config/libConfigService.a $(top_builddir)/src/services/server/libServerService.a \
+	$(top_builddir)/src/framework/libFramework.a $(top_builddir)/src/extensions/libExtensions.a \
+	$(top_builddir)/src/services/libServices.a $(EMBER_EXT_LIBS)
 
 
 ember_bin_SOURCES = Avatar.cpp ConsoleObjectImpl.cpp \
